src/logger.css
plaintext#logger > *,
#logger > * {
    width: *;
    padding-left: 4dip;
}

debug {
    color: rgb(150,150,150);
}

error,
exception {
    color: red;
    //font-weight: bold;
}

log {
    color: rgb(40,40,40);
}

note {
    color: green;
}

warn {
    color: orange;
}

